# game_project_1

./: CMakeLists.txt
SDL2/include/: SDL_render.h
src/: Game.cpp  Game.h  Object.h  Scene.h  SceneMain.cpp  SceneMain.h  main.cpp
test/: test.cpp
